tests/test_files/invalid/semantic/unknown_attribute_in_nested_assignment.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Struct MyStructComposition
    weight : string
    my_location : Location
End

Struct MyStructComposition_2
    struct_comp: MyStructComposition
End

Struct MyStructComposition_3
    struct_comp_2: MyStructComposition_2
End

MyStructComposition_3 structComp3Json
    struct_comp_2: {
        "struct_comp": {
            "weight": "50 kg",
            "unknown_attribute": "value",
            "my_location": {
                "id": "0x4711",
                "type": "50 kg"
            }
        }
    }
End 

Task mainTask
    Test
End
